--- a/vignettes/Introduction_to_spnaf.Rmd
+++ b/vignettes/Introduction_to_spnaf.Rmd
@@ -44,7 +44,7 @@ args(Gij.polygon)
 ```
 
 ### How to execute
-```{r}
+```{r, eval=FALSE}
 ## data preparation
 CA <- spnaf::CA
 OD <- cbind(CA$FIPS.County.Code.of.Geography.B, CA$FIPS.County.Code.of.Geography.A)
@@ -60,16 +60,21 @@ CA_polygon <- spnaf::CA_polygon
 ## Execution
 result <- Gij.polygon(df = OD, shape = CA_polygon, queen = TRUE, snap = 1,
 method = 't', n = 1000)
-
-head(result[[1]])
-head(result[[2]])
 ```
 
 ### Interpretation of the result
 The metric, an extended statistic of Getis and Ord (1992), G~i~^\*^, has similar intuition of hotspot analysis with static data: a high and significant value in a flow indicates spatial clustering of flows with high values. it can be interpreted as Z-value suitable for conducting statistical tests as the metric inherited the characteristics of G~i~^\*^. If one conducted bootstrapping for 1,000 times like above, those with a value greater than the 50th largest value of the distribution (i.e., at the significance level of 0.05) can be defined as positive clusters.
 
+```{r, eval=FALSE}
+# positive clusters at the significance level of 0.05
+head(result[[1]][50,])
+# positive clusters at the significance level of 0.05 in lines class
+head(result[[2]][50,])
+```
+
 
 ### Reference
 * Berglund, S., & Karlström, A. (1999). Identifying local spatial association in flow data, *Journal of Geographical Systems*, 1(3), 219-236. https://doi.org/10.1007/s101090050013  
 * Getis, A., & Ord, J. K. (1992). The Analysis of Spatial Association by Use of Distance Statistics, *Geographical Analysis*, 24(3), 189-206. https://doi.org/10.1111/j.1538-4632.1992.tb00261.x  
-* Chun, Y. (2008). Modeling network autocorrelation within migration flows by eigenvector spatial filtering. *Journal of Geographical Systems*, 10, 317–344. https://doi.org/10.1007/s10109-008-0068-2
+* Chun, Y. (2008). Modeling network autocorrelation within migration flows by eigenvector spatial filtering. *Journal of Geographical Systems*, 10, 317–344. https://doi.org/10.1007/s10109-008-0068-2  
+* Lee, Y., Park, S., Kim, K., Ha, H., and Lee, J. (2021). Discovering Millennials' Migration Clusters in Seoul, South Korea: A Local Spatial Network Autocorrelation Approach. *Findings*, November. https://doi.org/10.32866/001c.29523.
