--- a/vignettes/Introduction_to_spnaf.Rmd
+++ b/vignettes/Introduction_to_spnaf.Rmd
@@ -45,7 +45,7 @@ args(Gij.polygon)
 
 ### How to execute
 ```{r, eval=FALSE}
-## data preparation
+# Data manipulation
 CA <- spnaf::CA
 OD <- cbind(CA$FIPS.County.Code.of.Geography.B, CA$FIPS.County.Code.of.Geography.A)
 OD <- cbind(OD, CA$Flow.from.Geography.B.to.Geography.A)
@@ -53,9 +53,15 @@ OD <- data.frame(OD)
 names(OD) <- c("oid", "did", "n")
 OD$n <- as.numeric(OD$n)
 OD <- OD[order(OD[,1], OD[,2]),]
-head(OD)
+head(OD) # check the input df's format
 
+# Load sf polygon
 CA_polygon <- spnaf::CA_polygon
+head(CA_polygon) # it has geometry column
+
+# Execution of Gij.polygon with data above and given parameters
+result <- Gij.polygon(df = OD, shape = CA_polygon, queen = TRUE, snap = 1,
+method = 't', n = 1000)
 
 ## Execution
 result <- Gij.polygon(df = OD, shape = CA_polygon, queen = TRUE, snap = 1,
