add visualization and fix the process of retrieving significant results in the vignette

--- a/vignettes/Introduction_to_spnaf.Rmd
+++ b/vignettes/Introduction_to_spnaf.Rmd
@@ -16,10 +16,11 @@ knitr::opts_chunk$set(
   comment = "#>"
 )
 ```
-
 ```{r setup, echo = FALSE}
 library(spnaf)
+knitr::opts_chunk$set(warning = FALSE, message = FALSE) 
 ```
+
 
 ## Data: CA
 The package has a dataset called **CA** which stands for California, US. This dataset contains migration amounts among CA counties in 2019. The data consists of origins and destinations of each residential flow.  
@@ -44,7 +45,7 @@ args(Gij.polygon)
 ```
 
 ### How to execute
-```{r, eval=FALSE}
+```{r, warnings = FALSE}
 # Data manipulation
 CA <- spnaf::CA
 OD <- cbind(CA$FIPS.County.Code.of.Geography.B, CA$FIPS.County.Code.of.Geography.A)
@@ -62,21 +63,41 @@ head(CA_polygon) # it has geometry column
 # Execution of Gij.polygon with data above and given parameters
 result <- Gij.polygon(df = OD, shape = CA_polygon, queen = TRUE, snap = 1,
 method = 't', n = 1000)
-
-## Execution
-result <- Gij.polygon(df = OD, shape = CA_polygon, queen = TRUE, snap = 1,
-method = 't', n = 1000)
 ```
 
 ### Interpretation of the result
 The metric, an extended statistic of Getis and Ord (1992), $G_{i}^{*}$, has similar intuition of hotspot analysis with static data: a high and significant value in a flow indicates spatial clustering of flows with high values. it can be interpreted as Z-value suitable for conducting statistical tests as the metric inherited the characteristics of $G_{i}^{*}$. If one conducted bootstrapping for 1,000 times like above, those with a value greater than the 50th largest value of the distribution (i.e., at the significance level of 0.05) can be defined as positive clusters.
 
-```{r, eval=FALSE}
+```{r, eval = TRUE}
 # positive clusters at the significance level of 0.05
-head(result[[1]][50,])
+head(result[[1]][result[[1]]$pval < 0.05,])
 # positive clusters at the significance level of 0.05 in lines class
-head(result[[2]][50,])
+head(result[[2]][result[[2]]$pval < 0.05,])
 ```
+
+### Visualization of all flows and Significant Flows(<0.05) only
+```{r, warning = FALSE, fig.show = "hold", out.width = "45%"}
+library(tmap)
+# plot all flows with the polygon (left)
+tm_shape(CA_polygon) +
+  tm_polygons()+
+  tm_shape(result[[2]]) +
+  tm_lines()
+# plot significant flows only with the polygon (right)
+tm_shape(CA_polygon) +
+  tm_polygons()+
+  tm_shape(result[[2]][result[[2]]$pval < 0.05,]) +
+  tm_lines(col='pval')
+
+```
+
+<!-- ### Visualize Significant Flows(<0.05) only -->
+<!-- ```{r} -->
+<!-- tm_shape(CA_polygon) + -->
+<!--   tm_polygons()+ -->
+<!--   tm_shape(result[[2]][result[[2]]$pval < 0.05,]) + -->
+<!--   tm_lines(col='pval') -->
+<!-- ``` -->
 
 
 ### Reference
